[package]
name = "glfont"
version = "0.1.0"
edition = "2021"
authors = [
    "GamingLiamStudios <58615717+GamingLiamStudios@users.noreply.github.com>",
]
license = "LGPL-2.1-only"

[features]
default = ["std"]
std = []

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

thiserror = "1" # TODO: use derive_more
fixed = "1.27"
chrono = "0.4"

paste = "1"
num-traits = "0.2"
bytemuck = { version = "1.16", features = [
    "min_const_generics",
    "extern_crate_alloc",
] }

itertools = "0.13"
rgb = { version = "0.8", features = ["bytemuck"] }
png = "0.17"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
perf = "deny"
all = "deny"
